# anomaly-detector

./: CMakeLists.txt
analysis/: Analysis.ipynb  requirements.txt
include/: config.h  detector.h  exceptions.h
src/: main.cpp
